<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/container">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@android:color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Form.View.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium">
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_medium"
                    android:layout_marginLeft="@dimen/space_medium"
                    android:layout_marginRight="@dimen/space_medium"
                    android:hint="@string/nombre"
                    android:textSize="@dimen/text_body_2"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/space_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edad"
                            android:textSize="@dimen/text_body_2"
                            android:inputType="number"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/peso"
                            android:textSize="@dimen/text_body_2"
                            android:inputType="numberDecimal"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/height"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/estatura"
                            android:textSize="@dimen/text_body_2"
                            android:inputType="numberDecimal"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/sexo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sexo"
                        android:textSize="@dimen/text_h6"
                        android:layout_gravity="center"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/siluetahombre"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingRight="10dp"
                            android:src="@drawable/silueta_normal_hombre_marca_agua"
                            android:layout_weight="1"
                            android:onClick="maleGenre"
                            />

                        <ImageView
                            android:id="@+id/siluetamujer"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingLeft="10dp"
                            android:src="@drawable/silueta_normal_mujer_marca_agua"
                            android:layout_weight="1"
                            android:onClick="femaleGenre"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/actividad_fisica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actividad"
                        android:textSize="@dimen/text_body_1"/>

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_body_1">
                    </Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/space_medium">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/neck"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/cuello"
                                android:textSize="@dimen/text_body_2"
                                android:inputType="numberDecimal"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/waist"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/cintura"
                                android:textSize="@dimen/text_body_2"
                                android:inputType="numberDecimal"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/hip"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/cadera"
                                android:textSize="@dimen/text_body_2"
                                android:inputType="numberDecimal"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/como_medir"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medir"
                            android:textAllCaps="false"
                            android:textSize="@dimen/text_button"
                            android:textColor="@android:color/white"
                            android:background="@color/colorPrimary"
                            android:layout_marginBottom="@dimen/space_small"
                            android:onClick="medir"
                            />

                        <Button
                            android:id="@+id/limpiar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/limpiar"
                            android:textAllCaps="false"
                            android:textSize="@dimen/text_button"
                            android:textColor="@android:color/white"
                            android:background="@color/colorPrimary"
                            android:layout_marginBottom="@dimen/space_small"
                            android:onClick="cleanForm" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/calculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_button"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    android:text="@string/boton"
                    android:layout_marginBottom="@dimen/space_medium"/>

                <Button
                    android:id="@+id/go_my_results"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_button"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:text="@string/boton_consultar"
                    android:layout_marginBottom="@dimen/space_small" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>